<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/merchantTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="Merchant name"
        android:textSize="30dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listOfDrinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/merchantTitle">

    </androidx.recyclerview.widget.RecyclerView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalizeOrderButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="15dp"
        android:text="Finalize Order"
        app:icon="@drawable/ic_baseline_shopping_cart_24"
        app:iconTint="@color/usc_yellow"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/usc_yellow"
        android:backgroundTint="@color/usc_red"
        />

</androidx.constraintlayout.widget.ConstraintLayout>