<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapPage">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.mapbox.mapboxsdk.maps.MapView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mapPageETAText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="65dp"
        android:layout_marginRight="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="ETA:\nDriving"
        android:gravity="center"
        android:maxLines="2"
        android:textColor="@color/usc_yellow"
        android:backgroundTint="@color/usc_red"
        />

</androidx.constraintlayout.widget.ConstraintLayout>